		System: added Bulgarian Lev and Namibian Dollar as currency
		System: added Bulgarian and Korean as development languages
		System: removed image button from TinyMCE
		System: fixed out of place > in Chrome in certain breadcrumbs
		System: directed Google OAuth to give offline access, ensure presence of refreshToken
		System: updated .gitignore to include .DS_store files
		Activities: added information to parent dashboard
		Activities: efficiency improvements in displaying time slots
		Departments: added course long name to header of Class page
		Departments: fixed errant translation preventing Class page details from showing in some languages (e.g. Spanish, French)
		Departments: included participants in Class page, rather than as a subpage.
		Markbook: added settings to enable/disable Effort and Rubrics
		Messenger: fixed formatting of Sent From Gibbon tag
		Messenger: fixed display of email/SMS report for recipients with , in their name
		Planner: adjusted permissions to allow teachers to duplicate lessons belonging to other people (to reuse them)
		Planner: fixed Previous/Next Lesson links in lesson plan view to work for teachers who do not teach a given class
		Planner: added ability to tag units, in order to help build curriculum maps
		Planner: fixed lesson plan duplicate return bug, when not in current year
		Resources: improved usability of tag entry interface
		School Admin: fixed timezone issue in managing special days
		School Admin: added Dashboard Settings, to allow setting of default landing tab in staff, student and parent dashboards
		School Admin: fixed PHP notice issue when adding special days
		Staff: fixed PHP Notice bugs in Staff Manage Contract Add screen
		Staff: tweaked student accept to remove - from names
		Students: fixed PHP Notice bug in Student Enrolment Add screen
		Students: tweaked student accept to remove - from names
		Students: fixed broken link from Family in student profile to sibling, when sibling is not enroled in the year