@@ -2,8 +2,8 @@
 
 	/********************************************
 	PayPal API Module
-	 
-	Defines all the global variables and the wrapper functions 
+
+	Defines all the global variables and the wrapper functions
 	********************************************/
 	$PROXY_HOST='127.0.0.1';
 	$PROXY_PORT='808';
@@ -20,20 +20,23 @@
 	$API_Password=getSettingByScope($connection2, "System", "paypalAPIPassword") ;
 	$API_Signature=getSettingByScope($connection2, "System", "paypalAPISignature") ;
 
+	//Set LOCALECODE
+	$localecode = _SESSION[$guid]['i18n']['code'] ;
+
 	// BN Code 	is only applicable for partners
 	$sBNCode="PP-ECWizard";
-	
-	
-	/*	
-	' Define the PayPal Redirect URLs.  
+
+
+	/*
+	' Define the PayPal Redirect URLs.
 	' 	This is the URL that the buyer is first sent to do authorize payment with their paypal account
 	' 	change the URL depending if you are testing on the sandbox or the live PayPal site
 	'
 	' For the sandbox, the URL is       https://www.sandbox.paypal.com/webscr&cmd=_express-checkout&token=
 	' For the live site, the URL is        https://www.paypal.com/webscr&cmd=_express-checkout&token=
 	*/
-	
-	if ($SandboxFlag==true) 
+
+	if ($SandboxFlag==true)
 	{
 		$API_Endpoint="https://api-3t.sandbox.paypal.com/nvp";
 		$PAYPAL_URL="https://www.sandbox.paypal.com/webscr?cmd=_express-checkout&token=";
@@ -47,7 +50,7 @@
 	$USE_PROXY=false;
 	$version="93";
 
-	if (session_id()=="") 
+	if (session_id()=="")
 		@session_start();
 
 	/* An express checkout transaction starts with a token, that
@@ -58,22 +61,22 @@
 	   to PayPal to first authorize payment
 	   */
 
-	/*   
+	/*
 	'-------------------------------------------------------------------------------------------------------------------------------------------
 	' Purpose: 	Prepares the parameters for the SetExpressCheckout API Call.
-	' Inputs:  
+	' Inputs:
 	'		paymentAmount:  	Total value of the shopping cart
 	'		currencyCodeType: 	Currency code value the PayPal API
 	'		paymentType: 		paymentType has to be one of the following values: Sale or Order or Authorization
 	'		returnURL:			the page where buyers return to after they are done with the payment review on PayPal
 	'		cancelURL:			the page where buyers return to when they cancel the payment review on PayPal
-	'--------------------------------------------------------------------------------------------------------------------------------------------	
+	'--------------------------------------------------------------------------------------------------------------------------------------------
 	*/
-	function CallShortcutExpressCheckout( $paymentAmount, $currencyCodeType, $paymentType, $returnURL, $cancelURL, $guid) 
+	function CallShortcutExpressCheckout( $paymentAmount, $currencyCodeType, $paymentType, $returnURL, $cancelURL, $guid)
 	{
 		//------------------------------------------------------------------------------------------------------------------------------------
 		// Construct the parameter string that describes the SetExpressCheckout API call in the shortcut implementation
-		
+
 		$nvpstr="&PAYMENTREQUEST_0_AMT=". $paymentAmount;
 		$nvpstr=$nvpstr . "&PAYMENTREQUEST_0_PAYMENTACTION=" . $paymentType;
 		$nvpstr=$nvpstr . "&PAYMENTREQUEST_0_CURRENCYCODE=" . $currencyCodeType;
@@ -83,13 +86,14 @@
 		$nvpstr=$nvpstr . "&L_PAYMENTREQUEST_0_QTY0=1&L_PAYMENTREQUEST_0_AMT0=$paymentAmount" ;
 		$nvpstr=$nvpstr . "&RETURNURL=" . $returnURL;
 		$nvpstr=$nvpstr . "&CANCELURL=" . $cancelURL;
-		
-		$_SESSION[$guid]["currencyCodeType"]=$currencyCodeType;	  
+		$nvpstr=$nvpstr . "&LOCALECODE=" . $localecode;
+
+		$_SESSION[$guid]["currencyCodeType"]=$currencyCodeType;
 		$_SESSION[$guid]["PaymentType"]=$paymentType;
 
-		//'--------------------------------------------------------------------------------------------------------------- 
+		//'---------------------------------------------------------------------------------------------------------------
 		//' Make the API call to PayPal
-		//' If the API call succeded, then redirect the buyer to PayPal to begin to authorize payment.  
+		//' If the API call succeded, then redirect the buyer to PayPal to begin to authorize payment.
 		//' If an error occured, show the resulting errors
 		//'---------------------------------------------------------------------------------------------------------------
 	    $resArray=hash_call("SetExpressCheckout", $nvpstr, $guid);
@@ -99,14 +103,14 @@
 			$token=urldecode($resArray["TOKEN"]);
 			$_SESSION[$guid]['TOKEN']=$token;
 		}
-		   
+
 	    return $resArray;
 	}
 
-	/*   
+	/*
 	'-------------------------------------------------------------------------------------------------------------------------------------------
 	' Purpose: 	Prepares the parameters for the SetExpressCheckout API Call.
-	' Inputs:  
+	' Inputs:
 	'		paymentAmount:  	Total value of the shopping cart
 	'		currencyCodeType: 	Currency code value the PayPal API
 	'		paymentType: 		paymentType has to be one of the following values: Sale or Order or Authorization
@@ -120,16 +124,16 @@
 	'		shipToZip:			the Ship to ZipCode entered on the merchant's site
 	'		shipToStreet2:		the Ship to Street2 entered on the merchant's site
 	'		phoneNum:			the phoneNum  entered on the merchant's site
-	'--------------------------------------------------------------------------------------------------------------------------------------------	
+	'--------------------------------------------------------------------------------------------------------------------------------------------
 	*/
-	function CallMarkExpressCheckout( $paymentAmount, $currencyCodeType, $paymentType, $returnURL, 
+	function CallMarkExpressCheckout( $paymentAmount, $currencyCodeType, $paymentType, $returnURL,
 									  $cancelURL, $shipToName, $shipToStreet, $shipToCity, $shipToState,
 									  $shipToCountryCode, $shipToZip, $shipToStreet2, $phoneNum
-									) 
+									)
 	{
 		//------------------------------------------------------------------------------------------------------------------------------------
 		// Construct the parameter string that describes the SetExpressCheckout API call in the shortcut implementation
-		
+
 		$nvpstr="&PAYMENTREQUEST_0_AMT=". $paymentAmount;
 		$nvpstr=$nvpstr . "&PAYMENTREQUEST_0_PAYMENTACTION=" . $paymentType;
 		$nvpstr=$nvpstr . "&RETURNURL=" . $returnURL;
@@ -144,13 +148,13 @@
 		$nvpstr=$nvpstr . "&PAYMENTREQUEST_0_SHIPTOCOUNTRYCODE=" . $shipToCountryCode;
 		$nvpstr=$nvpstr . "&PAYMENTREQUEST_0_SHIPTOZIP=" . $shipToZip;
 		$nvpstr=$nvpstr . "&PAYMENTREQUEST_0_SHIPTOPHONENUM=" . $phoneNum;
-		
-		$_SESSION[$guid]["currencyCodeType"]=$currencyCodeType;	  
+
+		$_SESSION[$guid]["currencyCodeType"]=$currencyCodeType;
 		$_SESSION[$guid]["PaymentType"]=$paymentType;
 
-		//'--------------------------------------------------------------------------------------------------------------- 
+		//'---------------------------------------------------------------------------------------------------------------
 		//' Make the API call to PayPal
-		//' If the API call succeded, then redirect the buyer to PayPal to begin to authorize payment.  
+		//' If the API call succeded, then redirect the buyer to PayPal to begin to authorize payment.
 		//' If an error occured, show the resulting errors
 		//'---------------------------------------------------------------------------------------------------------------
 	    $resArray=hash_call("SetExpressCheckout", $nvpstr, $guid);
@@ -160,17 +164,17 @@
 			$token=urldecode($resArray["TOKEN"]);
 			$_SESSION[$guid]['TOKEN']=$token;
 		}
-		   
+
 	    return $resArray;
 	}
-	
+
 	/*
 	'-------------------------------------------------------------------------------------------
 	' Purpose: 	Prepares the parameters for the GetExpressCheckoutDetails API Call.
 	'
-	' Inputs:  
+	' Inputs:
 	'		None
-	' Returns: 
+	' Returns:
 	'		The NVP Collection object of the GetExpressCheckoutDetails Call Response.
 	'-------------------------------------------------------------------------------------------
 	*/
@@ -184,7 +188,7 @@
 		//' at this state - the buyer still needs an additional step to finalize
 		//' the transaction
 		//'--------------------------------------------------------------
-	   
+
 	    //'---------------------------------------------------------------------------
 		//' Build a second API request to PayPal, using the token as the
 		//'  ID to get the details on the payment authorization
@@ -192,29 +196,29 @@
 	    $nvpstr="&TOKEN=" . $token;
 
 		//'---------------------------------------------------------------------------
-		//' Make the API call and store the results in an array.  
+		//' Make the API call and store the results in an array.
 		//'	If the call was a success, show the authorization details, and provide
-		//' 	an action to complete the payment.  
+		//' 	an action to complete the payment.
 		//'	If failed, show the error
 		//'---------------------------------------------------------------------------
 	    $resArray=hash_call("GetExpressCheckoutDetails",$nvpstr, $guid);
 	    $ack=strtoupper($resArray["ACK"]);
 		if($ack=="SUCCESS" || $ack=="SUCCESSWITHWARNING")
-		{	
+		{
 			$_SESSION[$guid]['payer_id']=	$resArray['PAYERID'];
-		} 
+		}
 		return $resArray;
 	}
-	
+
 	/*
 	'-------------------------------------------------------------------------------------------------------------------------------------------
 	' Purpose: 	Prepares the parameters for the GetExpressCheckoutDetails API Call.
 	'
-	' Inputs:  
+	' Inputs:
 	'		sBNCode:	The BN code used by PayPal to track the transactions from a given shopping cart.
-	' Returns: 
+	' Returns:
 	'		The NVP Collection object of the GetExpressCheckoutDetails Call Response.
-	'--------------------------------------------------------------------------------------------------------------------------------------------	
+	'--------------------------------------------------------------------------------------------------------------------------------------------
 	*/
 	function ConfirmPayment( $guid, $FinalPaymentAmt, $token, $payer_id )
 	{
@@ -222,9 +226,9 @@
 		   finalize the PayPal payment.  The variable nvpstr
 		   holds the name value pairs
 		   */
-		
 
-		//Format the other parameters that were stored in the session from the previous calls	
+
+		//Format the other parameters that were stored in the session from the previous calls
 		$token 				=urlencode($token);
 		$paymentType 		=urlencode($_SESSION[$guid]['PaymentType']);
 		$currencyCodeType 	=urlencode($_SESSION[$guid]['currencyCodeType']);
@@ -233,7 +237,7 @@
 		$serverName 		=urlencode($_SERVER['SERVER_NAME']);
 
 		$nvpstr='&TOKEN=' . $token . '&PAYERID=' . $payerID . '&PAYMENTREQUEST_0_PAYMENTACTION=' . $paymentType . '&PAYMENTREQUEST_0_AMT=' . $FinalPaymentAmt;
-		$nvpstr .='&PAYMENTREQUEST_0_CURRENCYCODE=' . $currencyCodeType . '&IPADDRESS=' . $serverName; 
+		$nvpstr .='&PAYMENTREQUEST_0_CURRENCYCODE=' . $currencyCodeType . '&IPADDRESS=' . $serverName;
 
 		 /* Make the call to PayPal to finalize payment
 		    If an error occured, show the resulting errors
@@ -248,12 +252,12 @@
 
 		return $resArray;
 	}
-	
+
 	/*
 	'-------------------------------------------------------------------------------------------------------------------------------------------
 	' Purpose: 	This function makes a DoDirectPayment API call
 	'
-	' Inputs:  
+	' Inputs:
 	'		paymentType:		paymentType has to be one of the following values: Sale or Order or Authorization
 	'		paymentAmount:  	total value of the shopping cart
 	'		currencyCode:	 	currency code value the PayPal API
@@ -267,18 +271,18 @@
 	'		creditCardType:		buyer's credit card type (i.e. Visa, MasterCard ... )
 	'		creditCardNumber:	buyers credit card number without any spaces, dashes or any other characters
 	'		expDate:			credit card expiration date
-	'		cvv2:				Card Verification Value 
-	'		
+	'		cvv2:				Card Verification Value
+	'
 	'-------------------------------------------------------------------------------------------
-	'		
-	' Returns: 
+	'
+	' Returns:
 	'		The NVP Collection object of the DoDirectPayment Call Response.
-	'--------------------------------------------------------------------------------------------------------------------------------------------	
+	'--------------------------------------------------------------------------------------------------------------------------------------------
 	*/
 
 
 	function DirectPayment( $paymentType, $paymentAmount, $creditCardType, $creditCardNumber,
-							$expDate, $cvv2, $firstName, $lastName, $street, $city, $state, $zip, 
+							$expDate, $cvv2, $firstName, $lastName, $street, $city, $state, $zip,
 							$countryCode, $currencyCode )
 	{
 		//Construct the parameter string that describes DoDirectPayment
@@ -330,11 +334,11 @@
 
 		curl_setopt($ch, CURLOPT_RETURNTRANSFER,1);
 		curl_setopt($ch, CURLOPT_POST, 1);
-		
+
 	    //if USE_PROXY constant set to TRUE in Constants.php, then only proxy will be enabled.
-	   //Set proxy name to PROXY_HOST and port number to PROXY_PORT in constants.php 
+	   //Set proxy name to PROXY_HOST and port number to PROXY_PORT in constants.php
 		if($USE_PROXY)
-			curl_setopt ($ch, CURLOPT_PROXY, $PROXY_HOST. ":" . $PROXY_PORT); 
+			curl_setopt ($ch, CURLOPT_PROXY, $PROXY_HOST. ":" . $PROXY_PORT);
 
 		//NVPRequest for submitting to server
 		$nvpreq="METHOD=" . urlencode($methodName) . "&VERSION=" . urlencode($version) . "&PWD=" . urlencode($API_Password) . "&USER=" . urlencode($API_UserName) . "&SIGNATURE=" . urlencode($API_Signature) . $nvpStr . "&BUTTONSOURCE=" . urlencode($sBNCode);
@@ -350,15 +354,15 @@
 		$nvpReqArray=deformatNVP($nvpreq);
 		$_SESSION[$guid]['nvpReqArray']=$nvpReqArray;
 
-		if (curl_errno($ch)) 
+		if (curl_errno($ch))
 		{
 			// moving to display page to display curl errors
 			  $_SESSION[$guid]['curl_error_no']=curl_errno($ch) ;
 			  $_SESSION[$guid]['curl_error_msg']=curl_error($ch);
 
-			  //Execute the Error handling module to display errors. 
-		} 
-		else 
+			  //Execute the Error handling module to display errors.
+		}
+		else
 		{
 			 //closing the curl
 		  	curl_close($ch);
@@ -370,20 +374,20 @@
 	/*'----------------------------------------------------------------------------------
 	 Purpose: Redirects to PayPal.com site.
 	 Inputs:  NVP string.
-	 Returns: 
+	 Returns:
 	----------------------------------------------------------------------------------
 	*/
 	function RedirectToPayPal ( $token )
 	{
 		global $PAYPAL_URL;
-		
+
 		// Redirect to paypal.com here
 		$payPalURL=$PAYPAL_URL . $token;
 		header("Location: ".$payPalURL);
 		exit;
 	}
 
-	
+
 	/*'----------------------------------------------------------------------------------
 	 * This function will take NVPString and convert it to an Associative Array and it will decode the response.
 	  * It is usefull to search for a particular key and displaying arrays.
